--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "coredns"]
 	path = coredns
-	url = https://github.com/chains-project/coredns.git
+	url = git@github.com:chains-project/coredns.git
