--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,7 @@ jobs:
 
       - name: Build track_syscalls
         run: |
-          sudo apt-get install binutils
+          sudo apt-get install llvm
           (cd track_syscalls && make all)
 
       - name: Build test packages
