--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,8 +18,7 @@ jobs:
 
       - name: Build track_syscalls
         run: |
-          sudo apt-get -y install llvm
-          sudo apt-get -y install bcc-tools
+          sudo apt-get -y install llvm libbpfcc-dev libbpf-dev linux-headers-$(uname -r)
           (cd track_syscalls && make all)
 
       - name: Build test packages
