chore: run all tests under track_syscalls

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,4 +26,4 @@ jobs:
         run: (cd testpkgs/basiccgo && make all)
 
       - name: Run tests
-        run: (cd track_syscalls && sudo go test)
+        run: (cd track_syscalls && sudo go test ./...)
