added added capability enforcement mode; added mapping syscalls-cap

--- a/eBPFleash/Makefile
+++ b/eBPFleash/Makefile
@@ -1,10 +1,19 @@
-.PHONY: all clean
+.PHONY: all clean build cap-enforce sys-enforce
 
 all: bpf_loader
 
 bpf_loader: main.go
 	go generate
 	go build -o bpf_loader
+
+build:
+	sudo ./bpf_loader -binary ../../testCGO/testCGO -manifest ../../testCGO/go.mod -mode build
+
+cap-enforce:
+	sudo ./bpf_loader -binary ../../testCGO/testCGO -manifest ../../testCGO/go.mod -mode cap-enforce
+
+sys-enforce:
+	sudo ./bpf_loader -binary ../../testCGO/testCGO -manifest ../../testCGO/go.mod -mode sys-enforce
 
 clean:
 	rm -f bpf_loader
