configurable binary to trace

--- a/eBPFleash/Makefile
+++ b/eBPFleash/Makefile
@@ -1,19 +1,25 @@
 .PHONY: all clean build cap-enforce sys-enforce
 
+TARGET_CMD ?= testCGO
+BINARY ?= ../../testCGO/testCGO
+MANIFEST ?= ../../testCGO/go.mod
+
 all: bpf_loader
 
 bpf_loader: main.go
-	go generate
+	TARGET_CMD=$(TARGET_CMD) go generate
 	go build -o bpf_loader
 
+trace:
+	sudo ./bpf_loader -binary $(BINARY) -manifest $(MANIFEST) -mode trace
 build:
-	sudo ./bpf_loader -binary ../../testCGO/testCGO -manifest ../../testCGO/go.mod -mode build
+	sudo ./bpf_loader -binary $(BINARY) -manifest $(MANIFEST) -mode build
 
 cap-enforce:
-	sudo ./bpf_loader -binary ../../testCGO/testCGO -manifest ../../testCGO/go.mod -mode cap-enforce
+	sudo ./bpf_loader -binary $(BINARY) -manifest $(MANIFEST) -mode cap-enforce
 
 sys-enforce:
-	sudo ./bpf_loader -binary ../../testCGO/testCGO -manifest ../../testCGO/go.mod -mode sys-enforce
+	sudo ./bpf_loader -binary $(BINARY) -manifest $(MANIFEST) -mode sys-enforce
 
 clean:
 	rm -f bpf_loader
