--- a/eBPFleash/Makefile
+++ b/eBPFleash/Makefile
@@ -1,17 +1,19 @@
 .PHONY: all clean build cap-enforce sys-enforce
 
-TARGET_CMD ?= testExec
-BINARY ?= ../testPkg/testExec/testExec
-MANIFEST ?= ../testPkg/testExec/go.mod
+TARGET ?= testExec
+TARGET_DIR ?= ../testPkgs/testExec
+BINARY ?= $(TARGET_DIR)/$(TARGET)
+MANIFEST ?= $(TARGET_DIR)/go.mod
 
 all: bpf_loader
 
 bpf_loader: main.go
-	TARGET_CMD=$(TARGET_CMD) go generate
+	TARGET_CMD=$(TARGET) go generate
 	go build -o bpf_loader
 
 trace:
 	sudo ./bpf_loader -binary $(BINARY) -manifest $(MANIFEST) -mode trace
+
 build:
 	sudo ./bpf_loader -binary $(BINARY) -manifest $(MANIFEST) -mode build
 
