handled multiple binaries

--- a/eBPFleash/Makefile
+++ b/eBPFleash/Makefile
@@ -1,24 +1,37 @@
 .PHONY: all clean build cap-enforce sys-enforce
 
+TARGET_NAME ?= default
+
 # Functional test: testExec
-#TARGET_NAME ?= testExec
-#BINARY ?= ../testPkgs/testExec/testExec
-
-# Experiment 1: frps
-#TARGET_NAME ?= frps
-#BINARY ?= ../exp1/frp/target/bin/$(TARGET_NAME)
-
-# Experiment 1: geth
-#TARGET_NAME ?= geth
-#BINARY ?= ../exp1/go-ethereum/$(TARGET_NAME)
-
-# Experiment 1: etcd
-TARGET_NAME ?= etcd
-BINARY ?= ../exp1/etcd/target/bin/$(TARGET_NAME)
+#BINARIES ?= ../testPkgs/testExec/testExec
 
 # Malicious Behaviors
-#TARGET_NAME ?= testMalicious
-#BINARY ?= ../exp1/testMalicious/target/$(TARGET_NAME)
+#BINARIES ?= ../exp1/testMalicious/target/testMalicious
+
+# Experiment 1: frps
+#BINARIES ?= ../exp1/frp/target/bin/frps \
+# 			../exp1/frp/target/bin/frpc
+
+# Experiment 1: geth
+BINARIES ?= ../exp1/go-ethereum/geth
+
+# Experiment 1: etcd
+#BINARIES ?= ../exp1/etcd/target/bin/etcd \
+#			../exp1/etcd/target/bin/etcdctl \
+#			../exp1/etcd/target/bin/etcdutl
+
+# Experiment 1: kubernetes
+#BINARIES ?= ../exp1/kuberneter/taget/_output/local/bin/linux/amd64/kube-apiserver \
+#            ../exp1/kuberneter/taget/_output/local/bin/linux/amd64/kube-controller-manager \
+#            ../exp1/kuberneter/taget/_output/local/bin/linux/amd64/kube-scheduler \
+#            ../exp1/kuberneter/taget/_output/local/bin/linux/amd64/kube-proxy \
+#            ../exp1/kuberneter/taget/_output/local/bin/linux/amd64/kubelet \
+#            ../exp1/kuberneter/taget/_output/local/bin/linux/amd64/kubeclt \
+#            ../exp1/kuberneter/taget/_output/local/bin/linux/amd64/kubeadm
+
+space := $(empty) $(empty)
+comma := ,
+BINARY_ARGS := $(subst $(space),$(comma),$(BINARIES))
 
 all: bpf_loader
 
@@ -27,13 +40,13 @@ bpf_loader: main.go
 	go build -o bpf_loader
 
 build:
-	sudo ./bpf_loader -binary $(BINARY) -mode build
+	sudo ./bpf_loader -binary $(BINARY_ARGS) -mode build
 
 cap-enforce:
-	sudo ./bpf_loader -binary $(BINARY) -mode cap-enforce
+	sudo ./bpf_loader -binary $(BINARY_ARGS) -mode cap-enforce
 
 sys-enforce:
-	sudo ./bpf_loader -binary $(BINARY) -mode sys-enforce
+	sudo ./bpf_loader -binary $(BINARY_ARGS) -mode sys-enforce
 
 clean:
 	rm -f bpf_loader
